--- a/public/web/cover.css
+++ b/public/web/cover.css
@@ -10,13 +10,17 @@ a:hover {
 }
 
 /* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
+.btn-default{
   color: #333;
   text-shadow: none; /* Prevent inheritence from `body` */
   background-color: #fff;
   border: 1px solid #fff;
+}
+
+.btn-default:hover,
+.btn-default:focus{
+  background-color: #fff;
+  border: 1px solid #66AFE9;
 }
 
 
@@ -29,24 +33,24 @@ body {
   height: 100%;
   background-color: #333;
 }
-body {
-  color: #fff;
-  text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
-}
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
+  color: #fff;
+  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  text-align: center;
   display: table;
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+
 }
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
+  background-color: #333;
 }
 .cover-container {
   margin-right: auto;
@@ -55,7 +59,7 @@ body {
 
 /* Padding for spacing */
 .inner {
-  padding: 30px;
+  padding: 10%;
 }
 
 
@@ -67,33 +71,6 @@ body {
   margin-bottom: 10px;
 }
 
-.masthead-nav > li {
-  display: inline-block;
-}
-.masthead-nav > li + li {
-  margin-left: 20px;
-}
-.masthead-nav > li > a {
-  padding-right: 0;
-  padding-left: 0;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff; /* IE8 proofing */
-  color: rgba(255,255,255,.75);
-  border-bottom: 2px solid transparent;
-}
-.masthead-nav > li > a:hover,
-.masthead-nav > li > a:focus {
-  background-color: transparent;
-  border-bottom-color: #a9a9a9;
-  border-bottom-color: rgba(255,255,255,.25);
-}
-.masthead-nav > .active > a,
-.masthead-nav > .active > a:hover,
-.masthead-nav > .active > a:focus {
-  color: #fff;
-  border-bottom-color: #fff;
-}
 
 @media (min-width: 768px) {
   .masthead-brand {
@@ -104,13 +81,29 @@ body {
   }
 }
 
+.panel{
+  color:#fff;
+  background-color: #333;
+}
+
+.panel:hover{
+  color:#333;
+  background-color: #fff;
+}
+
+a {
+ color: inherit; 
+}
+a:hover{
+ color: #333; 
+} 
 
 /*
  * Cover
  */
 
 .cover {
-  padding: 0 20px;
+  padding: 10% 20px;
 }
 .cover .btn-lg {
   padding: 10px 20px;
@@ -135,11 +128,10 @@ body {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: fixed;  
     bottom: 0;
   }
   /* Start the vertical centering */
